<resources>
    <string name="app_name">TeacherAssistant</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="button_courses_text">Courses</string>
    <string name="button_students_text">Students</string>
    <string name="button_report_text">Generate report</string>
    <string name="add_course_hint">Name of the course</string>
    <string name="add_button">Add</string>
    <string name="new_course">New course</string>
    <string name="details">Details</string>
    <string name="old_course_name">Old course name:</string>
    <string name="new_course_name">New course name:</string>
    <string name="save">save</string>
    <string name="new_student_first_name">New student first name:</string>
    <string name="new_student_last_name">New student last name:</string>
    <string name="old_student_last_name">Old student last name:</string>
    <string name="first_name_of_the_student">First name of the student</string>
    <string name="last_name_of_the_student">Last name of the student</string>
    <string name="add_student">Add student</string>
    <string name="grades">Grades</string>
    <string name="add_grade">Add grade</string>
    <string name="grade">Grade:</string>
    <string name="note">Note:</string>
    <string name="add">add</string>
</resources>