<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeFragment">

        <Button
            android:id="@+id/buttonCourses"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_courses_text"
            app:layout_constraintBottom_toTopOf="@+id/buttonStudents"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonReport"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:text="@string/button_report_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonStudents" />

        <Button
            android:id="@+id/buttonStudents"
            android:layout_width="0dp"
            android:layout_height="88dp"
            android:text="@string/button_students_text"
            app:layout_constraintBottom_toTopOf="@+id/buttonReport"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buttonCourses" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>