<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="coursesViewModel"
            type="com.example.teacherassistant.courses.CoursesViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".courses.CourseEditFragment">


        <TextView
            android:id="@+id/old_course_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_course_name"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/old_course_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/new_course_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/new_course_name"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_course_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/old_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.187"
            app:layout_constraintStart_toEndOf="@+id/old_course_name_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.285"
            tools:text="Matematyka" />

        <EditText
            android:id="@+id/new_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_course_name_label"
            app:layout_constraintTop_toBottomOf="@+id/old_course_name_label"
            app:layout_constraintVertical_bias="0.184"
            tools:text="New name" />

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="352dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_course_name"
            app:layout_constraintVertical_bias="0.0" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>