<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="studentsViewModel"
            type="com.example.teacherassistant.students.StudentsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".courses.CourseEditFragment">


        <TextView
            android:id="@+id/old_student_first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Old student first name:"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/old_student_first_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/old_student_last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_student_last_name"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/old_student_last_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.052"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/new_student_first_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/new_student_first_name"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_student_first_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/new_student_last_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/new_student_last_name"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/new_student_last_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/old_student_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.106"
            app:layout_constraintStart_toEndOf="@+id/old_student_first_name_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.148"
            tools:text="Jan" />

        <TextView
            android:id="@+id/old_student_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.132"
            app:layout_constraintStart_toEndOf="@+id/old_student_first_name_label"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.212"
            tools:text="Kowalski" />

        <EditText
            android:id="@+id/new_student_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_student_first_name_label"
            app:layout_constraintTop_toBottomOf="@+id/old_student_first_name_label"
            app:layout_constraintVertical_bias="0.154"
            tools:text="New first name" />

        <EditText
            android:id="@+id/new_student_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/new_student_first_name_label"
            app:layout_constraintTop_toBottomOf="@+id/old_student_first_name_label"
            app:layout_constraintVertical_bias="0.256"
            tools:text="New last name" />

        <Button
            android:id="@+id/save"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_student_last_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>